[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = ["lazy-loader>=0.4"]
description = "Add your description here"
name = "hello-sphinx-autoapi"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[project.optional-dependencies]
docs = ["furo>=2024.8.6", "sphinx-autoapi>=3.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = []
managed = true
